cmake_minimum_required(VERSION 3.27)
project(CPP)

set(CMAKE_CXX_STANDARD 26)

#add_executable(_test test.cpp)
#add_executable(TRIE_STRUCT_word_prefix csps/TRIE_STRUCT_word_prefix.cpp)
#add_executable(hash-cnt-of-longest-cont-str csps/hash-cnt-of-longest-cont-str.cpp)
#add_executable(test-ranges test/test-ranges.cpp)
#add_executable(pq-min-k csps/优先队列-找前k小.cpp)
#add_executable(dsu-2 csps/并查集-带权值-战舰命令.cpp)
#add_executable(dsu-1 csps/并查集-信仰问题.cpp)
#add_executable(dsu-3 csps/并查集-弄信息传递.cpp)
#add_executable(bzoj2054 csps/疯狂的馒头bzoj2054.cpp)
#add_executable(jhdsr csps/狡猾的商人.cpp)3
#add_executable(gyzf csps/关押罪犯.cpp)
#add_executable(szsz1 csps/树状数组1-初步探索.cpp)
#add_executable(szsz2 csps/树状数组模板.cpp)
#add_executable(nxd csps/逆序对.cpp)
#add_executable(ykzdxx csps/夜空中的星星.cpp)
#add_executable(zdzfx csps/最大正方形.cpp)
#add_executable(dyzdl csps/单源最短路tmp.cpp)
#add_executable(kruskal csps/最小生成树kruskal.cpp)
#add_executable(prime csps/最小生成树prim.cpp)
#add_executable(lingyibeibao csps/dp零一背包.cpp)
#add_executable(bdcf csps/边的查分.cpp)
#add_executable(sxdpdnqk        csps/树形dp_电脑情况.cpp)
#add_executable(szhf csps/数字划分.cpp)
#add_executable(new_target csps/st区间最值查询.cpp)
#add_executable(new_target1 test.cpp)
